<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".GameFragment">

    <Button
        android:id="@+id/binstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bexit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bsiccors"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:background="@color/design_default_color_primary_variant"
        android:contentDescription="@string/siccors_button"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/siccors_mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/bpaper"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/design_default_color_primary_variant"
        android:contentDescription="@string/paper_button"
        android:src="@drawable/paper_mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/brock"
        app:layout_constraintStart_toEndOf="@+id/bsiccors" />

    <ImageButton
        android:id="@+id/brock"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="30dp"
        android:background="@color/design_default_color_primary_variant"
        android:contentDescription="@string/rock_button"
        android:src="@drawable/rock_mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/gameselection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/game_choice"
        android:src="@drawable/paper"
        android:translationZ="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binstruction"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="2dp"
            android:src="@drawable/ic_launcher_foreground" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>